[package]
authors = [
  "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the Actinius Icarus"
edition = "2018"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
name = "actinius-icarus-bsp"
readme = "README.md"
version = "0.1.0"

[dependencies]
nrf9160-hal = {git = "https://github.com/macthestack/nrf-hal"}

[dev-dependencies]
cortex-m-rt = "0.6.11"
nb = "0.1.1"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"

[features]
default = ["cdc-uart" , "pin-uart", "accel-irq"]
accel-irq = []
cdc-uart = []
pin-uart = []
