[package]
authors = [
  "Jonathan Pallant <jonathan.pallant@42technology.com>",
]
categories = ["embedded", "no-std"]
description = "BSP for the Actinius Icarus"
edition = "2018"
keywords = ["arm", "nrf9160"]
license = "MIT OR Apache-2.0"
name = "actinius-icarus-bsp"
readme = "README.md"
version = "0.1.0"

[dependencies]
nrf9160-hal = "0.13.0"

[dev-dependencies]
cortex-m-rt = "0.7.0"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"

[features]
default = ["cdc-uart" , "pin-uart", "accel-irq"]
accel-irq = []
cdc-uart = []
pin-uart = []
